--- a/index.html
+++ b/index.html
@@ -21,29 +21,30 @@
 </header>
 
 <section class="text-center py-6 md:py-10 bg-white px-4 md:px-0">
-    <h2 class="text-xl md:text-2xl font-bold mb-8 md:mb-12">У ребенка нет друзей, проблемы с коммуникацией?</h2>
+    <h2 class="text-3xl md:text-4xl font-bold mb-12 md:mb-20">У ребенка нет друзей, проблемы с коммуникацией?</h2>
     <div class="flex flex-col md:flex-row justify-between items-center md:items-start max-w-6xl mx-auto">
-        <div class="w-full md:w-1/2 mb-8 md:mb-0 text-left">
-            <h3 class="text-2xl md:text-3xl font-bold leading-tight mb-4">Решите проблему с помощью психолога</h3>
-            <p class="text-base md:text-lg leading-relaxed mb-6">
+        <div class="w-full md:w-1/2 mb-12 md:mb-0 text-left">
+            <h3 class="text-4xl md:text-5xl font-bold leading-tight mb-8">Решите проблему с помощью психолога</h3>
+            <p class="text-lg md:text-xl leading-relaxed mb-10">
                 Запишитесь на <span class="text-green-600">бесплатную видео-консультацию</span>
-                со специалистом, который использует в работе передовые психотерапии
+                со специалистом, который использует передовые психотерапии
             </p>
-            <button class="bg-purple-600 text-white py-2 px-8 rounded-md transition duration-300 hover:bg-transparent hover:text-purple-600 hover:border-purple-600 border-2 border-purple-600 text-sm md:text-base">
+            <button class="bg-purple-600 text-white py-2 px-8 rounded-md transition duration-300 hover:bg-transparent hover:text-purple-600 hover:border-purple-600 border-2 border-purple-600 text-base md:text-lg">
                 Записаться
             </button>
         </div>
         <div class="w-full md:w-1/2 relative">
             <img alt="Психологическая консультация" class="w-full object-contain" src="images/promo.png">
-            <div class="bg-gray-200 p-4 mt-4 text-left">
-                <p class="text-xs md:text-sm text-gray-700">
-                    Первая 20-минутная консультация бесплатно у всех наших специалистов.
-                    На сеансе вы получите диагностику и поймете, насколько серьезна проблема и чем мы вам сможем помочь.
-                </p>
-            </div>
         </div>
     </div>
+    <div class="bg-gray-200 p-12 mt-8 text-center">
+        <p class="text-sm md:text-base text-gray-700">
+            Первая 20-минутная консультация бесплатно у всех наших специалистов.
+            На сеансе вы получите диагностику и поймете, насколько серьезна проблема и чем мы вам сможем помочь.
+        </p>
+    </div>
 </section>
+
 
 <div class="text-center font-sans px-4 md:px-0">
     <h2 class="text-xl md:text-2xl font-bold mb-4 md:mb-6">Все психологи имеют опыт работы в школе с подростками</h2>
@@ -67,11 +68,110 @@
         <img alt="Команда" class="w-full md:w-1376 md:h-267 object-cover" src="images/team.png">
     </div>
 </div>
+<section class="py-8 px-4 md:py-12 md:px-8 bg-white">
+    <h2 class="text-2xl md:text-4xl font-bold text-center mb-8 md:mb-12">
+        Сомневаетесь нужен ли Вам психолог?
+    </h2>
+
+    <div class="flex flex-col md:flex-row items-center md:items-start justify-between max-w-6xl mx-auto">
+        <div class="w-full md:w-1/2 mb-6 md:mb-0">
+            <p class="text-xl md:text-2xl mb-6 font-medium">
+                Пройдите бесплатную диагностику в нашем телеграмм-боте.
+            </p>
+            <p class="text-lg md:text-xl mb-8 text-gray-700">
+                В результате диагностики вы получите первичные рекомендации и голосовую обратную связь от нашего
+                психолога.
+            </p>
+            <button class="bg-purple-600 text-white py-3 px-8 rounded-md text-xl font-bold hover:bg-purple-700 transition duration-300">
+                Бесплатная диагностика
+            </button>
+        </div>
+
+        <div class="w-full md:w-1/2 relative">
+            <img alt="Психолог с телефоном" class="w-full max-w-md mx-auto" src="images/free.png">
+        </div>
+    </div>
+</section>
+<section class="py-8 px-4 md:py-12 md:px-8 bg-gray-100">
+    <h2 class="text-2xl md:text-3xl font-bold text-center mb-8 md:mb-12">
+        Как психологические проблемы подростка влияют<br class="hidden md:inline">
+        на его успеваемость в школе?
+    </h2>
+
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
+        <div class="bg-white p-6 rounded-lg shadow">
+            <h3 class="text-xl font-semibold mb-4">Стресс и тревожность</h3>
+            <p class="text-sm md:text-base">
+                Подросток, страдающий от тревожных расстройств или переживающий сильный стресс, может испытывать
+                затруднения с концентрацией и мотивацией в учебе. Это может привести к снижению успеваемости из-за
+                трудностей в усвоении материала.
+            </p>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow">
+            <h3 class="text-xl font-semibold mb-4">Депрессия</h3>
+            <p class="text-sm md:text-base">
+                Подросток, страдающий от депрессии, часто теряет интерес к учебе, может пропускать школу и терять
+                мотивацию к обучению. Это может привести к снижению оценок и успеваемости.
+            </p>
+        </div>
+
+        <div class="bg-white p-6 rounded-lg shadow">
+            <h3 class="text-xl font-semibold mb-4">Социальная изоляция</h3>
+            <p class="text-sm md:text-base">
+                Если подросток испытывает проблемы в общении с одноклассниками или чувствует себя изолированным, это
+                может повлиять на его учебную мотивацию и способность к сотрудничеству в группе.
+            </p>
+        </div>
+    </div>
+
+    <div class="bg-white p-6 rounded-lg shadow text-center ">
+        <p class="text-lg md:text-xl font-semibold font-weight 700">
+            Pifagor AI поможет решить психологические проблемы<br class="hidden md:inline">
+            и улучшить успеваемость и уровень развития ребенка.
+        </p>
+    </div>
+</section>
+<div class="py-8 px-4 md:py-12 md:px-8 bg-gray-100">
+    <div class="py-8 px-4 md:py-12 md:px-8 bg-gray-100">
+        <h2 class="text-2xl md:text-3xl font-bold text-center mb-8 md:mb-12">С чем мы можем вам помочь еще?</h2>
+    </div>
+    <div class="my-4 space-y-2 md:space-y-0 md:grid md:grid-cols-3 md:grid-rows-2 md:gap-2">
+        <button class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-md">Ребёнок не хочет учиться</button>
+        <button class="bg-green-500 hover:bg-green-600 text-white px-4 py-2 rounded-md">Как понять, что ребёнок курит,
+            пьет, употребляет наркотики
+        </button>
+        <button class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-md">Ребёнок стал неуправляемым
+        </button>
+        <button class="bg-yellow-500 hover:bg-yellow-600 text-white px-4 py-2 rounded-md">Ребенок не уверен в себе
+        </button>
+        <button class="bg-purple-500 hover:bg-purple-600 text-white px-4 py-2 rounded-md">Ребенок не умеет общаться со
+            сверстниками
+        </button>
+        <button class="bg-pink-500 hover:bg-pink-600 text-white px-4 py-2 rounded-md">У ребенка зависимость от
+            гаджетов
+        </button>
+    </div>
+    <div class="my-4">
+        <p>Не знаете что происходит с Вашим ребенком? </p>
+        <button class="text-blue-500 hover:underline">Начните с обращения к нам</button>
+    </div>
+    <div class="my-4 justify-center text-center">
+        <button class="bg-purple-600 text-white py-3 px-8 rounded-md text-xl font-bold hover:bg-purple-700 transition duration-300">
+            Записаться на консультацию
+        </button>
+        <span>или</span>
+        <button class="bg-purple-600 text-white py-3 px-8 rounded-md text-xl font-bold hover:bg-purple-700 transition duration-300">
+            Бесплатная диагностика
+        </button>
+    </div>
+</div>
 
 
 <footer class="text-center py-4 md:py-6 bg-gray-200 mt-6 md:mt-10">
     <p class="text-sm md:text-base text-gray-600">Экстренная помощь</p>
-    <p class="mt-2 text-sm md:text-base">Телефонные номера и контакты</p>
+
+    <p class="mt-2 text-sm md:text-base">Телефон доверия: <a href="tel:08005002250">0800 500 225 0</a></p>
 </footer>
+
 </body>
 </html>
