--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-900">
-<div class="w-1/2 md:w-4/5 mx-auto">
+<div class="w-3/4 md:w-4/5 mx-auto">
     <div class="flex flex-col items-center py-4">
         <div class="flex items-center space-x-2">
             <img alt="Pifagor AI Logo" class="w-8 h-8 md:w-12 md:h-12" src="images/logo.png">
@@ -28,7 +28,7 @@
                 <h3 class="text-4xl md:text-5xl font-bold leading-tight mb-8">Решите проблему с помощью психолога</h3>
                 <p class="text-lg md:text-xl leading-relaxed mb-10">
                     Запишитесь на <span class="text-green-600">бесплатную видео-консультацию</span>
-                    со специалистом, который использует передовые психотерапии
+                    со специалистом, который использует передовые методы психотерапии
                 </p>
                 <button class="bg-purple-600 text-white py-2 px-8 rounded-md transition duration-300 hover:bg-transparent hover:text-purple-600 hover:border-purple-600 border-2 border-purple-600 text-base md:text-lg">
                     Записаться
@@ -45,7 +45,6 @@
             </p>
         </div>
     </section>
-
 
     <div class="text-center font-sans px-4 md:px-0">
         <h2 class="text-xl md:text-2xl font-bold mb-4 md:mb-6">Все психологи имеют опыт работы в школе с
@@ -170,7 +169,6 @@
             </button>
         </div>
     </div>
-
 
     <footer class="text-center py-4 md:py-6 bg-gray-200 mt-6 md:mt-10">
         <p class="text-sm md:text-base text-gray-600">Экстренная помощь</p>
